--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
   <!-- Mobile Menu -->
   <div id="mobile-menu" class="hidden md:hidden bg-primary/95 backdrop-blur-md px-4 pb-4">
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Home</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">About</a>
+    <a href="index.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Home</a>
+    <a href="about.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">About</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Sales</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
