Initial commit - PigbaseWebsite Upgrade

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <nav class="hidden md:flex items-center space-x-6 text-sm font-medium">
       <a href="index.html" class="hover:text-brand-200 transition">Home</a>
       <a href="about.html" class="hover:text-brand-200 transition">About</a>
-      <a href="#" class="hover:text-brand-200 transition">News</a>
+      <a href="news.html" class="hover:text-brand-200 transition">News</a>
       <a href="#" class="hover:text-brand-200 transition">Sales</a>
-      <a href="#" class="hover:text-brand-200 transition">Contact Us</a>
+      <a href="contact.html" class="hover:text-brand-200 transition">Contact Us</a>
       <a href="#" class="hover:text-brand-200 transition">Login/Register</a>
     </nav>
 
