--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <nav class="hidden md:flex items-center space-x-6 text-sm font-medium">
       <a href="index.html" class="hover:text-brand-200 transition">Home</a>
       <a href="about.html" class="hover:text-brand-200 transition">About</a>
-      <a href="#" class="hover:text-brand-200 transition">News</a>
+      <a href="news.html" class="hover:text-brand-200 transition">News</a>
       <a href="#" class="hover:text-brand-200 transition">Sales</a>
       <a href="#" class="hover:text-brand-200 transition">Contact Us</a>
       <a href="#" class="hover:text-brand-200 transition">Login/Register</a>
@@ -68,9 +68,9 @@
   <div id="mobile-menu" class="hidden md:hidden bg-primary/95 backdrop-blur-md px-4 pb-4">
     <a href="index.html"class="-2 border-b border-white/10 hover:text-brand-200 transition">Home</a>
     <a href="about.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">About</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
+    <a href="news.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Sales</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
+    <a href="contact.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Login/Register</a>
     <a href="#" class="block w-max mt-3 bg-white text-primary px-4 py-2 rounded-xl font-semibold shadow hover:bg-gray-100 transition">
       App Download
@@ -89,11 +89,11 @@
     </section>
 
   <!-- Our Story Section -->
-<section class="py-16 px-4">
+<section class="py-12 sm:py-16 px-4">
   <div class="container mx-auto">
-    <div class="grid md:grid-cols-2 gap-12 items-center">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 sm:gap-12 items-center">
       <div data-aos="fade-right">
-        <h2 class="text-3xl font-bold mb-6">Our Story</h2>
+        <h2 class="text-2xl sm:text-3xl font-bold mb-6">Our Story</h2>
         <p class="text-gray-600 mb-4 text-justify">
           PigBase Eswatini was established in 2019 as an initiative of the Ministry of Agriculture, 
           Department of Veterinary and Livestock Services under the Pig Industry Enhancement Project. 
