--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <a href="news.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Sales</a>
     <a href="contact.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Login/Register</a>
+    <a href="login.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Login/Register</a>
     <a href="#" class="block w-max mt-3 bg-white text-primary px-4 py-2 rounded-xl font-semibold shadow hover:bg-gray-100 transition">
       App Download
     </a>
