--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PigBase Eswatini - Pig Management Solutions</title>
+     <!-- Add favicon -->
+    <link rel="icon" type="image/png" href="images/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -47,7 +49,7 @@
       <a href="news.html" class="hover:text-brand-200 transition">News</a>
       <a href="#" class="hover:text-brand-200 transition">Sales</a>
       <a href="contact.html" class="hover:text-brand-200 transition">Contact Us</a>
-      <a href="#" class="hover:text-brand-200 transition">Login/Register</a>
+      <a href="login.html" class="hover:text-brand-200 transition">Login/Register</a>
     </nav>
 
     <!-- App Download Button -->
@@ -65,10 +67,10 @@
   <div id="mobile-menu" class="hidden md:hidden bg-primary/95 backdrop-blur-md px-4 pb-4">
     <a href="index.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Home</a>
     <a href="about.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">About</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
+    <a href="news.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">News</a>
     <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Sales</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
-    <a href="#" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Login/Register</a>
+    <a href="contact.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Contact Us</a>
+    <a href="login.html" class="block py-2 border-b border-white/10 hover:text-brand-200 transition">Login/Register</a>
     <a href="#" class="block w-max mt-3 bg-white text-primary px-4 py-2 rounded-xl font-semibold shadow hover:bg-gray-100 transition">
       App Download
     </a>
