Initial commit - PigbaseWebsite Upgrade

--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
       <a href="about.html" class="hover:text-brand-200 transition">About</a>
       <a href="news.html" class="hover:text-brand-200 transition">News</a>
       <a href="#" class="hover:text-brand-200 transition">Sales</a>
-      <a href="#" class="hover:text-brand-200 transition">Contact Us</a>
-      <a href="#" class="hover:text-brand-200 transition">Login/Register</a>
+      <a href="contact.html" class="hover:text-brand-200 transition">Contact Us</a>
+      <a href="login.html" class="hover:text-brand-200 transition">Login/Register</a>
     </nav>
 
     <!-- App Download Button -->
