--- a/login.html
+++ b/login.html
@@ -66,7 +66,9 @@
             
             <!-- Logo + Title -->
             <div class="flex items-center space-x-2">
-                <img src="images/logo.png" alt="PigBase Eswatini Logo" class="h-10 w-10 ">
+                  <a href="index.html">
+      <img src="images/logo.png" alt="PigBase Eswatini Logo" class="h-10 w-10 ">
+    </a></a>
                 <h1 class="text-2xl font-extrabold tracking-wide">PigBase <span class="text-white/80">Eswatini</span></h1>
             </div>
 
