--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
             
             <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-              <p>© <span id="current-year"></span> BigBase Eswatini. All rights reserved. Developed by Mazwe.</p>
+              <p>© <span id="current-year"></span> BigBase Eswatini. All rights reserved. Developed by Technology Solutions Africa.</p>
               <script>
                 document.getElementById('current-year').textContent = new Date().getFullYear();
               </script>
