--- a/news.html
+++ b/news.html
@@ -323,7 +323,7 @@
             </div>
             
             <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-                <p>© <span id="current-year"></span> PigBase Eswatini. All rights reserved. Developed by Mazwe.</p>
+                <p>© <span id="current-year"></span> PigBase Eswatini. All rights reserved. Developed by Technology Solutions Africa.</p>
                 <script>
                     document.getElementById('current-year').textContent = new Date().getFullYear();
                 </script>
